--- a/book/03.17.org
+++ b/book/03.17.org
@@ -1,48 +1,423 @@
 * 今日计划
-** TODO fix all engine bug issue
+
+** TODO report
+week report
+
+iteration report
+
+** TODO add worker job data
+*** DONE finish draft
+CLOSED: [2018-02-19 Mon 18:40]
+
+add isUseWorker to workerDetectData
+
+finish useWorker
+
+
+*** DONE demo
+CLOSED: [2018-02-25 Sun 16:09]
+
+**** DONE worker->init
+CLOSED: [2018-02-24 Sat 21:40]
+//draft
+
+main_init:
+add more job
+//parse config
+
+
+worker_:
+add more job
+//parse config
+
+
+//pass compile
 
 
 
-** TODO update editor->engine version
+//pass render test
+
+
+
+
+**** DONE worker->draw
+CLOSED: [2018-02-25 Sun 16:09]
+create wonder-most-animation-frame project and import
+
+
+
+test animation-frame
+
+
+add send->get
+
+
+*** DONE rearrange plan
+CLOSED: [2018-02-26 Mon 10:00]
+use trello:
+write down engine,editor tasks together
+
+////when finish one, edit it!
+
+
+
+
+*** DONE no worker->init, loop
+CLOSED: [2018-02-28 Wed 07:40]
+//pass compile
+
+
+
+**** DONE init
+CLOSED: [2018-02-27 Tue 14:02]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-27 Tue 14:02]
+//pass load test
+
+//add set setting test
+
+//add init device test
+
+//init jobs:
+add initLightMaterialJob_test
+add pregetGLSLDataJob_test
+
+
+
+
+
+
+
+**** DONE loop
+CLOSED: [2018-02-28 Wed 07:40]
+***** DONE pass render test
+CLOSED: [2018-02-27 Tue 21:19]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-28 Wed 07:40]
+loop jobs:
+update jobs
+render jobs
+
+
+//redo-undo
+
+
+//add custom job
+
+
+
+
+
+
+
+
+
+*** TODO finish worker->init
+**** TODO pass worker test demo
+
+//pass init test demo
+
+pass loop test demo
+
+
+
+test create worker instance
+
+
+
+
+**** TODO finish init render:
+pass compile:
+create canvas
+
+...
+
+init gl
+
+send isDebug
+
+
+
+
+
+
+
+
+pass unit/integration test:
+add render worker test
+
+
+pass isDebug
+
+
+init light
+
+init geometry
+
+init material...
+
+
+
+
+
+pass unit test:
+loader
+Main
+
+
+
+add jobs:
+        {
+          "name": "preget_glslData"
+        },
+        {
+          "name": "init_state"
+        },
+        {
+          "name": "init_basic_material"
+        },
+        {
+          "name": "init_light_material"
+        }
+
+
+
+
+**** TODO debug info use debug instead of log
+
+
+*** TODO pass unit,integration test
+
+**** TODO add worker unit test
+
+
+
+*** TODO refactor
+
+**** TODO api, admin
+######################
+ecs api is for user
+(ecs api should use system)
+
+ecs admin and renderer admin is for job
+
+
+
+system is for operate state
+
+common is for share logic between systems
+
+
+utils
+
+
+share is for share logic between no worker and worker
+
+######################
+
+
+
+
+add GameObjectSystem
+(api->GameObject.re use it instead of use GameObjectAdmin)
+
+
+Job should use ecs admin instead of ecs system
+(e.g. InitCameraControllerJob.re)
+
+
+
+Job should use renderer admin instead of renderer system
+(e.g. use GLSLSenderAdmin instead of GLSLSenderDrawUtils, ...)
+
+
+
+
+
+
+*** TODO finish worker->draw
+**** TODO make transform data safe
+copy transform data to draw buffer
+
+
+
+
+*** TODO pass unit,integration test
+
+
+
+*** TODO finish no worker->init, draw
+
+
+*** TODO pass unit,integration test
+
+
+*** TODO refactor
+clean worker,single data
+
+
+add getExn in OptionUtils.re instead of Js.Option.getExn:
+use fatal!
+(correspond change Wonder-Editor!)
+
+
+
+most.js:
+add "callFunc" api (refer to animation-frame)
+
+
+
+unify specification:
+all json data use "xxx_xxx"
+all json->record type use "xxxXXX"
+
+
+rename "JobConfig" to "JobConfigData"
+
+
+
+remove DebugUtils.re
+
+
+
+*** TODO optimize
+
+
+
+
+
+
+** TODO refactor
+
+move 
+  workerFileDir: string,
+  /* TODO finish */
+  useWorker:bool,
+
+
+to workerConfig
+
+
+////move all main config to setting.json:
+  canvasId: option(string),
+  isDebug: bool,
+  workerFileDir: string,
+  contextConfig,
+  bufferConfig,
+  gpuConfig
+
+
+** TODO multi thread render
+*** TODO init
+
+
+*** TODO pass unit/integration test
+
+
+
+
+*** TODO render
+
+**** TODO make transform data safe
+copy transform data to draw buffer
+
+
+
+
+*** TODO pass unit/integration test
+
+
+
+
+** TODO publish
+restore test coverage to 95% up:
+////restore ci test coverage limit(.travis)
+restore ci test coverage limit(jest_coverage->not ignore worker files)
+
+
+
+** TODO show debug info
+setting.json add:
+debug: {
+    open_contract_check: true,
+    show_debug_info: true
+}
+
+
+
+show worker, main fps
+
+
+show worker, main memeory
+
+
+show total fps,render time
+
+
+show each job's render time, memory
+
+** TODO publish
+
+
+
+
+** TODO user can add job
+*** TODO worker
+**** TODO support user add worker job(in main/render/camera worker)
+copy transform data
+
+
+**** TODO support user added worker job to new worker
+
+add worker pool
+
+
+
+window.navigator.hardwareConcurrency
+
+make sure only hardwareConcurrency jobs can be used(in each worker)!else jobs should be wait
+
+
+
+
+**** TODO support add worker job at runtime(can add to different/new worker)
+
+*** TODO no worker
+**** TODO support add worker job at runtime(can add to different/new worker)
+
+
+
+
+
+
+** TODO advanced job
+*** TODO user can define job in json, add register job function by js
+
+*** TODO job(or all data) support hot loading
+setting.json add:
+debug: {
+    ...,
+    hot_update_data: true
+}
+
+
+
+add isDirty flag
+
+in each frame
+    if dirty, re-generate job graph
+
 
 
 ** TODO publish
 
 
-** 编辑器Editor
-*** TODO update engine version
-
-*** TODO optimize redo-undo
-
-copy array buffers when idle
-
-
-close issue
 
 
 
-*** TODO diferent loop can use diferent job pipelines!
 
-so when edit, loopBody should only update camera;
-when run, loopBody should update all(include update collider, update script, ...).
-
-
-////** TODO engine: add deepCopyForNew
-
-
-*** TODO add "contract check after set state" to ensure editEngineState and runEngineState should be the same
-
-add isStateEqual(state1, state2) function!
-
-
-
-*** TODO test "refresh engine"
-
-
-*** TODO use GPL license
-
-
-*** TODO update wonder.js version
 
 
 
@@ -50,63 +425,318 @@ add isStateEqual(state1, state2) function!
 
 
 * 完成事项
+** DONE report
+CLOSED: [2018-03-16 Fri 21:30]
+week report
 
+iteration report
+
+
+** TODO add worker job data
+*** DONE finish draft
+CLOSED: [2018-02-19 Mon 18:40]
+
+add isUseWorker to workerDetectData
+
+finish useWorker
+
+
+*** DONE demo
+CLOSED: [2018-02-25 Sun 16:09]
+
+**** DONE worker->init
+CLOSED: [2018-02-24 Sat 21:40]
+//draft
+
+main_init:
+add more job
+//parse config
+
+
+worker_:
+add more job
+//parse config
+
+
+//pass compile
+
+
+
+//pass render test
+
+
+
+
+**** DONE worker->draw
+CLOSED: [2018-02-25 Sun 16:09]
+create wonder-most-animation-frame project and import
+
+
+
+test animation-frame
+
+
+add send->get
+
+
+*** DONE rearrange plan
+CLOSED: [2018-02-26 Mon 10:00]
+use trello:
+write down engine,editor tasks together
+
+////when finish one, edit it!
+
+
+
+
+*** DONE no worker->init, loop
+CLOSED: [2018-02-28 Wed 07:40]
+//pass compile
+
+
+
+**** DONE init
+CLOSED: [2018-02-27 Tue 14:02]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-27 Tue 14:02]
+//pass load test
+
+//add set setting test
+
+//add init device test
+
+//init jobs:
+add initLightMaterialJob_test
+add pregetGLSLDataJob_test
+
+
+
+
+
+
+
+**** DONE loop
+CLOSED: [2018-02-28 Wed 07:40]
+***** DONE pass render test
+CLOSED: [2018-02-27 Tue 21:19]
+
+***** DONE pass u/i test
+CLOSED: [2018-02-28 Wed 07:40]
+loop jobs:
+update jobs
+render jobs
+
+
+//redo-undo
+
+
+//add custom job
+
+
+
+
+
+
+
+
+
+*** TODO finish worker->init
+**** TODO pass worker test demo
+
+//pass init test demo
+
+
+//pass init render test
+
+
+test create worker instance
+
+
+
+**** TODO loop
+
+add one job
+
+
+test loop job
+
+
+
+**** TODO refactor
+
+
+
+**** TODO finish init render:
+pass compile:
+create canvas
+
+...
+
+
+init gl
+
+
+
+send isDebug
+
+
+
+
+
+
+
+
+pass unit/integration test:
+add render worker test
+
+
+
+
+init light
+
+init geometry
+
+init material...
+
+
+
+
+
+pass unit test:
+loader
+Main
+
+
+
+add jobs:
+        {
+          "name": "preget_glslData"
+        },
+        {
+          "name": "init_state"
+        },
+        {
+          "name": "init_basic_material"
+        },
+        {
+          "name": "init_light_material"
+        }
+
+
+
+
+**** TODO debug info use debug instead of log
+
+
+*** TODO pass unit,integration test
+
+**** TODO add worker unit test
+
+
+
+*** TODO refactor
+
+
+
+*** TODO finish worker->draw
+**** TODO make transform data safe
+copy transform data to draw buffer
+
+
+**** TODO add loop jobs
+
+
+*** TODO pass unit,integration test
+
+
+
+
+////*** TODO finish no worker->init, draw
+
+
+////*** TODO pass unit,integration test
+
+
+*** TODO refactor
+clean worker,single data
+
+
+////add getExn in OptionUtils.re instead of Js.Option.getExn:
+use fatal!
+(correspond change Wonder-Editor!)
+
+
+
+most.js:
+add "callFunc" api (refer to animation-frame)
+
+
+
+unify specification:
+all json data use "xxx_xxx"
+all json->record type use "xxxXXX"
+
+
+rename "JobConfig" to "JobConfigData"
+
+
+
+remove DebugUtils.re
+
+
+
+** TODO optimize
+optimize multi thread render
+
+
+
+give benchmark report
+
+
+
+** TODO refactor
+
+move 
+  workerFileDir: string,
+  /* TODO finish */
+  useWorker:bool,
+
+
+to workerConfig
+
+
+////move all main config to setting.json:
+  canvasId: option(string),
+  isDebug: bool,
+  workerFileDir: string,
+  contextConfig,
+  bufferConfig,
+  gpuConfig
+
+
+** TODO publish
+restore test coverage to 95% up:
+restore ci test coverage limit(jest_coverage->not ignore worker files)
+
+
+
+
+give benchmark report
 
 
 
 
 * 编辑器Editor
 
+
+
+
 * 明日计划
 
+
+
 * 中期研究
-
-
-** TODO fix for snake
-*** DONE use old version
-CLOSED: [2018-04-25 Wed 23:02]
-//pass run test
-
-
-//add light
-
-
-//add texture
-
-
-//pass level
-
-
-//add prop
-
-
-//add obstacle
-
-
-
-
-refactor:
-clean unuse code
-
-
-*** TODO use new version
-
-fix add no worker job: use action type
-
-
-
-
-add BasicCameraViewAPI->setBasicCameraViewWorldToCameraMatrix
-
-
-
-
-fix  unsafeGetProgram bug
-
-
-
-
-
 
 
 
@@ -226,6 +856,48 @@ toCalledWith use list
 
 
 
+
+
+
+** TODO support webgl2
+*** TODO improve instance
+refer to http://www.jiazhengblog.com/blog/2017/03/20/3104/ -> comment:
+事实上在 webgl2 当中，可以直接使用 gl.vertexAttribDivisor 来直接完成实例化数组了，
+
+
+*** TODO defer shading
+
+**** TODO point light
+add dirty?
+
+
+*** TODO vao
+optimize: judge last sended vao buffer
+
+
+
+*** TODO ubo
+*** TODO glsl 3.0
+
+no need to compile!? but need to learn babyonjs compiler firstly!!!
+/*
+wonder-glsl-compiler should support convert glsl 2.0 to 3.0!!!???
+
+refer to babylonjs(source code):
+http://doc.babylonjs.com/features/webgl2#multisample-render-targets
+Shaders
+When WebGL2 is enabled, the shaders are automatically converted to GLSL v3.0. Babylon.js will then automatically take
+advantage of extended instruction/uniform counts. 
+
+*/
+
+
+
+
+*** TODO Occlusion Queries
+*** TODO more?
+
+** TODO publish
 
 
 
@@ -352,6 +1024,166 @@ fly camera controller
 
 
 
+** TODO extend
+*** TODO extend render config
+
+**** TODO improve shaders.json->branch(static_branch)
+remove static_branchs, change to:
+        {
+          "type": "static_branch",
+          "name": "modelMatrix_instance"
+        },
+
+
+add Shaders.re->addBranchHandle api, user can register handle after load(e.g. wd.addBranchHandle("modelMatrix_instance", function(xxx){...}))
+
+
+**** TODO add custom material+custom shader
+***** TODO custom glsl can support instance
+
+
+
+**** TODO user can write own .glsl can register to npm
+modify render config(shader config json?), support build npm->glsl to ShaderChunk.ts?
+
+
+
+
+
+**** TODO extend material
+user can add custom material, custom glsl, custom shaderLib_generate, custom render module(like defer, front render
+module/system)
+////(but how to handle render worker?)
+
+
+user can edit shaders.json, shader_libs.json(e.g. add condition limit so that use one shader lib when in mobile, use
+other one when in pc)
+
+
+
+
+**** TODO extend glsl
+
+***** TODO glsl use require,include?
+@bhouston what about a custom webpack loader for the glsl files instead of using the raw-loader? The loader could take care of recursively resolving any #include lines in the root shader file. Any shader could be required in with e.g.:
+
+var vert = require('three-glsl!../shaders/my-shader.vert')
+var frag = require('three-glsl!../shaders/my-shader.frag')
+just a thought
+
+
+
+
+
+
+
+
+*** TODO extend component
+/*
+user can write local/public component
+
+add wonder_component_config.json, add "components" field.
+e.g.
+{
+components:[
+"wonder-component-aaa"
+]
+}
+
+wonder should read this field and register it
+
+
+public component:
+(refer to typescript=>d.ts)
+user should send it to public github repository
+in ci, it will check and run unit test
+
+after pass ci and merge it, it will be published to @wonder-components/xxx npm package 
+*/
+
+**** TODO add script component
+http://docs.cocos.com/creator/manual/zh/scripting/
+
+now one script is one component(the type is user script component)
+
+editor should show it in inspector(the component name should be defined by script json)
+
+one gameObject can has multiple user script components(only has one? or has multiple?):
+declare properties(can be show and edit in editor)
+
+implement interface functions(.rei), e.g.:
+onDispose
+...
+
+
+
+refer to:
+https://developer.playcanvas.com/en/user-manual/scripting/
+
+
+
+***** TODO support Hot Reloading 
+https://developer.playcanvas.com/en/user-manual/scripting/hot-reloading/
+
+https://developer.playcanvas.com/zh/user-manual/introduction/
+
+
+
+***** TODO support import other script
+http://docs.cocos.com/creator/manual/zh/scripting/modular-script.html
+
+
+**** TODO add custom component
+declare properties(can be show and edit in editor)
+
+
+
+implement interface functions(.rei), e.g.:
+update
+dispose
+clone
+add
+...
+( component add and implement .rei)
+
+
+
+how to add component data to state???
+
+
+
+accept function string which is inputed from editor!
+use "new Function"?
+
+
+can use job for manage custom component(e.g. add "updateXXX" for update logic)
+*** TODO work in editor
+work in editor
+
+
+work with editor ->extension ui component?
+*** TODO solve how to extend by user:(refer to unity)
+
+
+how to write own component
+how to write own extension(material)
+build component repository?
+
+
+
+
+
+
+
+
+
+*** TODO extend job
+add user job in json
+
+
+** TODO publish
+
+
 
 
 
@@ -391,23 +1223,9 @@ fall back to js version
 
 
 
-
-
-**** TODO move create_basic_render_object_buffer, sort, cull to new worker: cull
-
-
-main worker state->gameObjectRecord->component maps should be sharedArrayBuffer data?
-
-or send component data (get from component maps) to worker?
-
-
-
-**** TODO dispose should defer 2 frame instead of defer 1 frame!
-
-
-
-**** TODO support add/remove cull worker job
-
+*** TODO advanced: gpu cull(need compute shader)
+https://zhuanlan.zhihu.com/p/33881505
+https://interplayoflight.wordpress.com/2017/11/15/experiments-in-gpu-based-occlusion-culling/
 
 
 
@@ -1007,25 +1825,11 @@ http://docs.cocos.com/creator/manual/zh/ui/multi-resolution.html
 
 
 *** TODO application
-微信小游戏：
 [[http://tech.qq.com/a/20171228/033531.htm][微信宣布小程序增加新类目“小游戏” 已上线《跳一跳》等]]
-
-
-Facebook Instant Games:
-http://gad.qq.com/article/detail/41976
-https://zhuanlan.zhihu.com/p/34565801
-https://developers.facebook.com/docs/games/instant-games
 
 
 
 ** TODO publish v1.0.0
-
-*** TODO add logo
-
-use "?" + "wonder" as logo
-
-*** TODO add more badge
-https://isitmaintained.com/
 
 
 
@@ -1055,213 +1859,6 @@ https://www.gitbook.com/
 
 
 support full screen(refer to babylon.engine.ts=>450 line)
-
-
-
-
-
-
-
-
-
-** TODO [#A] extend
-
-*** TODO extend files
-extend material(? material asset?), shader(.glsl), job(.js), script(.js), config data(.json->./Wonder.js/data/ json files)
-
-
-extend service(.js?)
-
-
-
-
-
-add config(.json) to specific the file structure in project file(.wd_project_package)
-
-
-*** TODO use .wonder_extend_package package(zip file) to include all extend files
-
-include asset:
-e.g.:
-.wd
-.bin
-...
-
-
-
-
-
-
-
-
-
-*** TODO extend render config
-
-**** TODO improve shaders.json->branch(static_branch)
-remove static_branchs, change to:
-        {
-          "type": "static_branch",
-          "name": "modelMatrix_instance"
-        },
-
-
-add Shaders.re->addBranchHandle api, user can register handle after load(e.g. wd.addBranchHandle("modelMatrix_instance", function(xxx){...}))
-
-
-**** TODO add custom material+custom shader
-***** TODO custom glsl can support instance
-
-
-
-**** TODO user can write own .glsl can register to npm
-modify render config(shader config json?), support build npm->glsl to ShaderChunk.ts?
-
-
-
-
-
-**** TODO extend material
-user can add custom material, custom glsl, custom shaderLib_generate, custom render module(like defer, front render
-module/system)
-////(but how to handle render worker?)
-
-
-user can edit shaders.json, shader_libs.json(e.g. add condition limit so that use one shader lib when in mobile, use
-other one when in pc)
-
-
-
-
-**** TODO extend glsl
-
-***** TODO glsl use require,include?
-@bhouston what about a custom webpack loader for the glsl files instead of using the raw-loader? The loader could take care of recursively resolving any #include lines in the root shader file. Any shader could be required in with e.g.:
-
-var vert = require('three-glsl!../shaders/my-shader.vert')
-var frag = require('three-glsl!../shaders/my-shader.frag')
-just a thought
-
-
-
-
-
-
-
-
-*** TODO extend component
-/*
-user can write local/public component
-
-add wonder_component_config.json, add "components" field.
-e.g.
-{
-components:[
-"wonder-component-aaa"
-]
-}
-
-wonder should read this field and register it
-
-
-public component:
-(refer to typescript=>d.ts)
-user should send it to public github repository
-in ci, it will check and run unit test
-
-after pass ci and merge it, it will be published to @wonder-components/xxx npm package 
-*/
-
-**** TODO add script component
-http://docs.cocos.com/creator/manual/zh/scripting/
-
-now one script is one component(the type is user script component)
-
-editor should show it in inspector(the component name should be defined by script json)
-
-one gameObject can has multiple user script components(only has one? or has multiple?):
-declare properties(can be show and edit in editor)
-
-implement interface functions(.rei), e.g.:
-onDispose
-...
-
-
-
-refer to:
-https://developer.playcanvas.com/en/user-manual/scripting/
-
-
-
-***** TODO support Hot Reloading 
-https://developer.playcanvas.com/en/user-manual/scripting/hot-reloading/
-
-https://developer.playcanvas.com/zh/user-manual/introduction/
-
-
-
-***** TODO support import other script
-http://docs.cocos.com/creator/manual/zh/scripting/modular-script.html
-
-
-***** TODO for editor->"edit and run" feature
-
-should invoke editor exposed api instead of directly invoke engine's api!
-(
-because if user add box in script, should update ui(e.g. scene tree)!
-)
-
-
-**** TODO add custom component
-declare properties(can be show and edit in editor)
-
-
-
-implement interface functions(.rei), e.g.:
-update
-dispose
-clone
-add
-...
-( component add and implement .rei)
-
-
-
-how to add component data to state???
-
-
-
-accept function string which is inputed from editor!
-use "new Function"?
-
-
-can use job for manage custom component(e.g. add "updateXXX" for update logic)
-*** TODO work in editor
-work in editor
-
-
-work with editor ->extension ui component?
-*** TODO solve how to extend by user:(refer to unity)
-
-
-how to write own component
-how to write own extension(material)
-build component repository?
-
-
-
-
-
-
-
-
-
-*** TODO extend job
-add user job in json
-
-
-** TODO publish
-
-
 
 
 
@@ -1332,6 +1929,122 @@ http://ourmachinery.com/post/one-draw-call-ui/
 
 
 ** TODO publish
+
+
+** TODO Voxel
+https://interplayoflight.wordpress.com/2015/04/08/the-rendering-technology-of-skysaga-infinite-isles/
+*** TODO voxel terrain
+https://www.youtube.com/watch?v=51JNyjBcDMo
+
+https://forum.unity.com/threads/terrainengine-voxel-terrain-smooth-cubic-2d-hexagonal-infinite-procedural-terrain.174595/
+
+
+marching cube
+destruct, dig hole
+lod
+multi materials(multi layer)
+
+voxel billboard?(for tree, grass)
+
+triplanar mapping
+
+
+
+
+*** TODO voxel model(which can be destruct)(static?)
+marching cube
+
+**** TODO generate a new uv map of a new polygon model generated by a voxel model(marching cube?) which can map the same texture of the origin polyon model's
+voxel farm:
+
+http://procworld.blogspot.com/2016/05/applying-textures-to-voxels.html
+***** We had to write voxelization routines that captured the UV data with no ambiguities.
+
+
+
+***** we had to make sure our dual contouring methods could output the UV data back into triangle form.
+
+The realtime compression had to be now aware of the UV space, and remain fast enough for realtime use.
+And last but not least we knew voxel content would be edited and modified in many sorts of cruel ways. We had to understand how the UV data would survive (or not) all these
+transformations. 
+
+***** internal voxels do not have UV info, but a regular material that is exposed when the surface voxels are gone.
+***** Only the surface voxels have UVs.
+
+
+
+
+
+
+Rethinking Texture Mapping:
+http://www.cemyuksel.com/courses/conferences/siggraph2017-rethinking_texture_mapping/rethinking_texture_mapping_course_notes.pdf
+
+
+
+volume-encoded-uv-maps
+http://vcg.isti.cnr.it/volume-encoded-uv-maps/volume-encoded-uv-maps.pdf
+http://vcg.isti.cnr.it/volume-encoded-uv-maps/volume-encoded-uv-maps_additional.pdf
+http://vcg.isti.cnr.it/volume-encoded-uv-maps/
+
+
+
+tileTrees
+https://www-sop.inria.fr/reves/Basilic/2007/LD07/LD07.pdf
+https://www-sop.inria.fr/reves/Basilic/2008/DL08/
+
+
+
+octree texture
+http://www.antexel.com/sylefeb/octreetex/
+http://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/DeBry02.pdf
+http://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Benson02.pdf
+
+
+
+Examining Automatic Texture Mapping of Arbitrary Terrains: https://www.diva-portal.org/smash/get/diva2:422722/FULLTEXT01.pdf
+
+
+should learn from book:
+《TEXTURING And MODELING A Procedural Approach》
+
+
+polycube map:
+http://vcg.isti.cnr.it/polycubemaps/
+
+
+Perfect Spatial Hashing:
+http://hhoppe.com/perfecthash.pdf
+https://github.com/Jinxit/psh
+
+
+
+
+need study:
+Unified Texture Management for Arbitrary Meshes: http://evasion.inrialpes.fr/Publications/2004/LDN04/RR-5210.pdf
+
+
+
+
+
+
+***** TODO references
+https://emnh.github.io/rts-blog/2017/04/25/10_voxelization.html
+Examining Automatic Texture Mapping of Arbitrary Terrains: https://www.diva-portal.org/smash/get/diva2:422722/FULLTEXT01.pdf
+
+
+**** TODO construct examples in game
+In Infinity: Battlescape, we designed our space stations, bases and factories to be modular. This means that we model &
+texture independant modules, which can get attached together in various configuration layouts. Here's one of such
+layouts for a space station: https://www.gamedev.net/blogs/entry/2262351-patch-0160-screenshots/
+
+https://www.youtube.com/watch?v=DQg6mpjQMRo&feature=youtu.be
+
+
+
+
+
+
+
 
 
 ** TODO add tag
